--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap_customised.css">
   <link rel="stylesheet" href="/css/custom.css">
-  <link rel="stylesheet" href="/css/card.css?lfdd">
+  <link rel="stylesheet" href="/css/card.css">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -40,7 +40,7 @@
         </ul>
       </div>
     </nav>
-    <main class="container mt-md-5 p-4">
+    <main class="container mt-md-5 p-4" id="main-container">
       <div class="row">
 
         <!--PROGRESS STATUS MOBILE-->
@@ -62,9 +62,9 @@
             <div class="star-at-top">
               <% if(currentUser && currentUser.isPremium){%>
                 <% if(isCardSaved){%>
-                  <div id="save-star-div-rendered" name="<%= currentUser.email %>/<%=card._id%>" class="save-star clicked" style="cursor:pointer"><i class="fas fa-star fa-lg"></i></div>
+                  <div id="save-star-div-rendered-top" name="<%= currentUser.email %>/<%=card._id%>" class="save-star clicked" style="cursor:pointer"><i class="fas fa-star fa-lg"></i></div>
                 <% } else { %>
-                  <div id="save-star-div-rendered" name="<%= currentUser.email %>/<%=card._id%>" class="save-star" style="cursor:pointer"><i class="far fa-star fa-lg"></i></div>
+                  <div id="save-star-div-rendered-top" name="<%= currentUser.email %>/<%=card._id%>" class="save-star" style="cursor:pointer"><i class="far fa-star fa-lg"></i></div>
                 <% } %>
               <% } else if (currentUser && !currentUser.isPremium) { %>
               <div id="" class="save-star" style="cursor:pointer"><a href="#" data-bs-toggle="modal" data-bs-target="#savePremium"><i class="far fa-star fa-lg"></i></a></div>
@@ -102,9 +102,9 @@
                   <div class="nezobrazovat-na-mobilu">
                     <% if(currentUser && currentUser.isPremium){%>
                       <% if(isCardSaved){%>
-                        <div id="save-star-div-rendered" name="<%= currentUser.email %>/<%=card._id%>" class="save-star clicked" style="cursor:pointer"><i class="fas fa-star fa-lg"></i></div>
+                        <div id="save-star-div-rendered-bottom" name="<%= currentUser.email %>/<%=card._id%>" class="save-star clicked" style="cursor:pointer"><i class="fas fa-star fa-lg"></i></div>
                       <% } else { %>
-                        <div id="save-star-div-rendered" name="<%= currentUser.email %>/<%=card._id%>" class="save-star" style="cursor:pointer"><i class="far fa-star fa-lg"></i></div>
+                        <div id="save-star-div-rendered-bottom" name="<%= currentUser.email %>/<%=card._id%>" class="save-star" style="cursor:pointer"><i class="far fa-star fa-lg"></i></div>
                       <% } %>
                     <% } else if (currentUser && !currentUser.isPremium) { %>
                     <div id="" class="save-star" style="cursor:pointer"><a href="#" data-bs-toggle="modal" data-bs-target="#savePremium"><i class="far fa-star fa-lg"></i></a></div>
@@ -193,7 +193,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-      <script src="/js/card.js?ihfdd"></script>
+      <script src="/js/card.js"></script>
 </body>
 
 </html>
