--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InLege</title>
+    <title>Studuj práva efektivně s InLege</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap_customised.css">
     <link rel="stylesheet" href="/css/custom.css">
     <link rel="stylesheet" href="/css/landing.css">
     <!-- META TAGS -->
     <meta property="og:url"                content="https://www.inlege.cz/" />
-    <meta property="og:title"              content="InLege - Studuj právo efektivně!" />
+    <meta property="og:title"              content="Studuj práva efektivně s InLege" />
     <meta property="og:description"        content="Stovky interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
     <meta property="og:image"              content="https://www.inlege.cz/img/fb_sharing.png" />
 </head>
@@ -33,8 +33,18 @@
           <div class="container">
               <div class="row">
                   <div class="col-md-5 offset-md-1 my-5 p-4">
-                    <h1 class="jumbotron-heading mb-3">Studuj práva efektivně!</h1>
+                    <h1 class="jumbotron-heading mb-3">Studuj práva efektivně s <span class="color-1">InLege</span>!</h1>
                     <p class="lead">Pusť se do studia práv s více než dvěma tisíci kartiček s otázkami a odpověďmi. Skvělá interaktivní příprava na zkoušky.</p>        
+                   <!-- <p>Pusť se do studia práv s více než dvěma tisíci kartiček s otázkami a odpověďmi, nabízejících skvělou interaktivní přípravu na zkoušky. S InLege získáš více než jen aplikaci - získáš společenství, které ti pomůže otevřít dveře k úspěšné právnické kariéře.</p>
+                    <h2>Proč Studovat s InLege?</h2>
+                    <ul>
+                        <li><strong>Unikátní Přístup:</strong> Zkušenosti absolventů práv přetavené do více než 2 500 interaktivních otázek a odpovědí.</li>
+                        <li><strong>Připraven na Vše:</strong> Efektivní příprava na zkoušky, nezávisle na fázi tvého studia či profesního růstu.</li>
+                        <li><strong>Širší Společenství:</strong> InLege není jen o kartičkách. Je to komunita mladých právníků, kteří se podporují na cestě k úspěchu.</li>
+                        <li><strong>Dostupné pro Všechny:</strong> Věříme, že kvalitní studijní materiály by měly být dostupné pro každého. Alespoň 50 % obsahu InLege je vždy zdarma!</li>
+                    </ul>
+                    <p>Přidej se k nám a udělej krok k efektivnějšímu a úspěšnějšímu studiu práv s InLege!</p>
+                -->
                     <div class="mt-5">
                         <% if(!currentUser){ %> 
                             <a href="/auth/user/new" class="btn btn-lg btn-danger">Studuj zdarma</a>
@@ -55,7 +65,7 @@
                         </div>
                         <div>
                             <p class="info-main"><%= numOfCards %> opakovacích kartiček</p>
-                            <p class="info-secondary text-muted">a přibývají</p>
+                            <p class="info-secondary text-muted">a přibývají každý týden</p>
                         </div>
                     </div>
                     <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
@@ -63,8 +73,8 @@
                             <i class="fas fa-mobile-alt fa-3x color-2 text-muted"></i>
                         </div>
                         <div>
-                            <p class="info-main">Procvičuj i na mobilu</p>
-                            <p class="info-secondary text-muted">díky responzivnímu designu</p>
+                            <p class="info-main">Studuj kdykoliv a kdekoliv</p>
+                            <p class="info-secondary text-muted">na mobilu i u počítače</p>
                         </div>
                     </div>
                     <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
@@ -72,8 +82,8 @@
                             <i class="fas fa-gavel fa-3x color-2 text-muted"></i>
                         </div>
                         <div>
-                            <p class="info-main"><%= numOfCategories %> právních oblastí </p>
-                            <p class="info-secondary text-muted">rozdělených do <%= numOfSections  %> balíčků</p>
+                            <p class="info-main"><%= numOfCategories %> oblastí, <%= numOfSections  %> balíčků</p>
+                            <p class="info-secondary text-muted">komplexní pokrytí studijního materiálu</p>
                         </div>
                     </div>
             </div>
@@ -259,7 +269,27 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
                     <h1 class="mb-4">Naše vize</h1>
-                    <p class="fs-5">Mladí právníci neustále skládají zkoušky. Ať už na právnické fakultě nebo po jejím dokončení v rámci dalšího profesního vzdělávání. Sami jsme touto cestou prošli. Rádi bychom jim nabídli nástroj, který jim na této náročné cestě usnadní život a přípravu na tyto zkoušky zefektivní. Proto jsme vytvořili <strong style="color:#E80F88">InLege</strong>, aplikaci pro studium práv.</p>
+                    <p class="fs-5">Mladí právníci neustále skládají zkoušky. Ať už na právnické fakultě nebo po jejím dokončení v rámci dalšího profesního vzdělávání. Sami jsme touto cestou prošli. Rádi bychom vám proto nabídli nástroj, který bychom za našich studijí sami ocenili a věříme, že vám na této náročné cestě usnadní život a přípravu na zkoušky zefektivní. Proto jsme vytvořili <strong style="color:#E80F88">InLege</strong>, aplikaci pro studenty práv.</p>
+                    <!--
+                    <p class="fs-5">Naší filozofií je, aby bylo InLege každodenním nástrojem pro co nejvíce studentů. Proto jsme si stanovili jako základní pravidlo, že bude vždy <strong style="color:#E80F88">nejméně 50 % obsahu zdarma</strong>. A to držíme!</p>
+                    <h1>Mladí Právníci, Zkoušky a InLege</h1>
+
+<p>Mladí právníci se neustále potýkají se zkouškami, ať už na právnické fakultě nebo v průběhu dalšího profesního vzdělávání po jejím absolvování. Jsme si vědomi této náročné cesty, proto jsme vytvořili nástroj, který bychom sami v době našich studií ocenili. S radostí vám představujeme <strong>InLege</strong>, inovativní webovou aplikaci pro studenty práv v České republice.</p>
+
+<p>Naše filozofie spočívá v poskytnutí užitečného nástroje, který vám usnadní přípravu na zkoušky a zefektivní váš studijní proces. Jsme přesvědčeni, že InLege se stane nezbytným společníkem na této náročné cestě. Proč?</p>
+
+<ol>
+    <li><strong>Zkušenostní Přístup:</strong> Jako absolventi práv jsme sami procházeli touto cestou, a tak jsme vytvořili aplikaci s ohledem na potřeby mladých právníků.</li>
+
+    <li><strong>Více než 2 500 Karet:</strong> InLege obsahuje více než 2 500 kartiček s otázkami a odpověďmi z různých oblastí práva, poskytující komplexní pokrytí materiálu.</li>
+
+    <li><strong>Efektivní Příprava:</strong> Cílem InLege je nejen usnadnit vám život, ale také vám poskytnout efektivní nástroj pro přípravu na zkoušky a další profesní výzvy.</li>
+
+    <li><strong>Dostupnost pro Všechny:</strong> Věříme, že každý student by měl mít přístup k kvalitním studijním materiálům. Proto jsme se zavázali, že alespoň 50 % obsahu InLege bude vždy dostupné zdarma.</li>
+</ol>
+
+<p>InLege není pouze aplikací, je to společenství mladých právníků, kteří sdílejí váš zájem a chtějí vám pomoci na cestě k úspěchu. Připojte se k nám a dejte nám šanci vám usnadnit cestu k právnickému úspěchu!</p>
+-->
                 </div>
             </div>
         </div>
