--- a/public/css/card.css
+++ b/public/css/card.css
@@ -24,7 +24,7 @@
   }
 
   .flip-card-front {
-    
+    transform: rotateX(0deg);
   }
 
   .flip-card-front {
@@ -149,6 +149,15 @@
 #btn-otocit,
 #btn-otocit-rendered {
   min-width: 120px;
+  z-index: 10000;
+}
+
+#btn-otocit:focus,
+#btn-otocit-rendered:focus {
+  outline: none;
+  background-color: white;
+  color:#E80F88;
+  border: 1px solid #E80F88;
 }
 
 #predchozi-karticka-link {
