--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -113,7 +113,7 @@
                       <% } %>
                   </div>
                   <div style="width:40px" class="zobrazovat-jen-na-mobilu"></div>
-                  <div>
+                  <div class="vlozeny-div">
                     <% if(sectionLength + 1 !== nextNum){ %>
                       <a href="/category/<%=card.category%>/section/<%=card.section%>/cardAjax/<%= nextNum %>" class="btn btn-lg btn-danger easy-btn" id="btn-dalsi-rendered">Další</a>
                     <% } else { %>
