--- a/public/css/card.css
+++ b/public/css/card.css
@@ -153,7 +153,9 @@
 }
 
 #btn-otocit:focus,
-#btn-otocit-rendered:focus {
+#btn-otocit-rendered:focus,
+#btn-otocit:hover,
+#btn-otocit-rendered:hover {
   outline: none;
   background-color: white;
   color:#E80F88;
