--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap_customised.css">
   <link rel="stylesheet" href="/css/custom.css">
-  <link rel="stylesheet" href="/css/card.css?hjjjf">
+  <link rel="stylesheet" href="/css/card.css?hddjjjf">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -80,12 +80,22 @@
         <div class="col-lg-6 offset-lg-2 mb-3">
           <div class="flip-card" id="flip-card">
             <div class="border-grey flip-card-inner">
-<              <div class="card-body flip-card-front pb-0">
-                <p>Euismod lacinia at quis risus sed vulputate odio ut. Sapien eget mi proin sed libero. Sit amet nisl purus in. Eu sem integer vitae justo. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu feugiat. Neque gravida in fermentum et sollicitudin ac orci. In nibh mauris cursus mattis. Ut enim blandit volutpat maecenas. Dolor purus non enim praesent elementum. Quam id leo in vitae turpis massa sed. Id interdum velit laoreet id donec ultrices tincidunt arcu non. Pellentesque habitant morbi tristique senectus et netus et malesuada. Interdum velit euismod in pellentesque. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Arcu felis bibendum ut tristique et egestas. Nec ullamcorper sit amet risus nullam eget felis eget nunc. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Ultrices vitae auctor eu augue ut.</p>
+              <div class="card-body flip-card-front pb-0">
+                <div class="front-main-content d-flex justify-content-center align-items-center">
+                  <div id="loaderA"></div>
+                  <div class="card-text m-4 text-center" id="pageA"><%- card.pageA %></div>
+                </div>
+                <div class="front-menu d-flex justify-content-between align-items-center">
+                  <a href=""></a>
+                  <div class="">
+                    <a href="#" class="btn btn-lg btn-outline-danger" id='btn-otocit-rendered'>Otočit</a>
+                  </div>
+                  <a href=""></a>
+                </div>
               </div>
               <div class="card-body flip-card-back pb-0">
                 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consequat nisl vel pretium lectus quam. </p>
+                
               </div>
             </div>
           </div>
@@ -153,7 +163,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-      <script src="/js/card.js?h"></script>
+      <script src="/js/card.js?hf"></script>
 </body>
 
 </html>
