--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap_customised.css">
   <link rel="stylesheet" href="/css/custom.css">
-  <link rel="stylesheet" href="/css/card.css?hddjjjf">
+  <link rel="stylesheet" href="/css/card.css?hddjddjjf">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -94,8 +94,38 @@
                 </div>
               </div>
               <div class="card-body flip-card-back pb-0">
-                
-                
+                <div class="back-main-content d-flex justify-content-center align-items-center text-gradient">
+                  <div id="loaderB"></div>
+                  <div class="card-text m-4" id="pageB"><%- card.pageB %></div>
+                </div>
+                <div class="back-menu d-flex justify-content-between align-items-center">
+                  <div class="nezobrazovat-na-mobilu">
+                    <% if(currentUser && currentUser.isPremium){%>
+                      <% if(isCardSaved){%>
+                        <div id="save-star-div-rendered-bottom" name="<%= currentUser.email %>/<%=card._id%>" class="save-star clicked" style="cursor:pointer"><i class="fas fa-star fa-lg"></i></div>
+                      <% } else { %>
+                        <div id="save-star-div-rendered-bottom" name="<%= currentUser.email %>/<%=card._id%>" class="save-star" style="cursor:pointer"><i class="far fa-star fa-lg"></i></div>
+                      <% } %>
+                    <% } else if (currentUser && !currentUser.isPremium) { %>
+                    <div id="" class="save-star" style="cursor:pointer"><a href="#" data-bs-toggle="modal" data-bs-target="#savePremium"><i class="far fa-star fa-lg"></i></a></div>
+                    <% } else { %>
+                      <div style="width:40px"></div>
+                      <% } %>
+                  </div>
+                  <div style="width:40px" class="zobrazovat-jen-na-mobilu"></div>
+                  <div class="vlozeny-div">
+                    <% if(sectionLength + 1 !== nextNum){ %>
+                      <a href="/category/<%=card.category%>/section/<%=card.section%>/cardAjax/<%= nextNum %>" class="btn btn-lg btn-danger easy-btn" id="btn-dalsi-rendered">Další</a>
+                    <% } else { %>
+                      <a href="/category/<%=card.category%>/section/<%=card.section%>/cardAjax/<%= nextNum %>" class="btn btn-lg btn-danger easy-btn" id="btn-dalsi-last-card">Další</a>
+                    <% } %>
+                    </div>
+                    <div>
+                      <a href="#" id="rotate-back-rendered" class="nezobrazovat-na-mobilu"><i class="fas fa-sync-alt fa-lg"></i></a>
+                      <a href="#" id="rotate-back-mobile-rendered" class="zobrazovat-jen-na-mobilu"><i class="fas fa-sync-alt fa-lg"></i></a>
+                    </div>
+                    
+                </div>
               </div>
             </div>
           </div>
@@ -163,7 +193,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-      <script src="/js/card.js?hf"></script>
+      <script src="/js/card.js?ddhf"></script>
 </body>
 
 </html>
