--- a/public/css/card.css
+++ b/public/css/card.css
@@ -20,21 +20,20 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    backface-visibility: hidden;
   }
 
   .flip-card-front {
     transform: rotateX(0deg);
+    
   }
 
   .flip-card-back {
     transform: rotateY(180deg);  
+    backface-visibility: hidden;
   }
 
-  .hide {
-    display: none;
-    height: 1px;
-    width: 1px;
+  .backface-visibility {
+    backface-visibility: hidden;
   }
 
   .front-main-content,
