--- a/public/css/cardBACKUP.css
+++ b/public/css/cardBACKUP.css
@@ -34,7 +34,8 @@
 
   .front-main-content,
   .back-main-content {
-    height: 100%;
+    height: 82%;
+    border-bottom: 1px solid #EEEEEE;
     overflow: auto;
   }
 
@@ -48,7 +49,7 @@
 
   .front-menu,
   .back-menu {
-    padding: 10px;
+    height: 18%;
   }
 
   #pageB {
@@ -209,6 +210,10 @@
     }
     .save-star {
       zoom: 120%;
+    }
+
+    #btn-dalsi-rendered {
+      margin-left: 50px;
     }
 
     #rotate-back-mobile,
