--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap_customised.css">
   <link rel="stylesheet" href="/css/custom.css">
-  <link rel="stylesheet" href="/css/card.css?gsfdg">
+  <link rel="stylesheet" href="/css/card.css?gsg">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -129,11 +129,9 @@
                 <% } else { %>
                   <div id="save-star-div-rendered-bottom" name="<%= currentUser.email %>/<%=card._id%>" class="save-star" style="cursor:pointer"><i class="far fa-star fa-lg"></i></div>
                 <% } %>
-              <% } else if (currentUser && !currentUser.isPremium) { %>
-              <div id="" class="save-star" style="cursor:pointer"><a href="#" data-bs-toggle="modal" data-bs-target="#savePremium"><i class="far fa-star fa-lg"></i></a></div>
               <% } else { %>
-                <div style="width:40px"></div>
-                <% } %>
+              <div id="" class="save-star" style="cursor:pointer"><a href="#" data-bs-toggle="modal" data-bs-target="#savePremium"><i class="far fa-star fa-lg"></i></a></div>
+              <% } %>
             </div>
             <div>
               <% if(sectionLength + 1 !== nextNum){ %>
@@ -193,7 +191,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-      <script src="/js/card.js"></script>
+      <script src="/js/card.js?ddd"></script>
 </body>
 
 </html>
