card design rebuild

--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap_customised.css">
   <link rel="stylesheet" href="/css/custom.css">
-  <link rel="stylesheet" href="/css/card.css?gsg">
+  <link rel="stylesheet" href="/css/card.css?gsssg">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -72,14 +72,12 @@
                   <div id="loaderA"></div>
                   <div class="card-text m-4 text-center" id="pageA"><%- card.pageA %></div>
                 </div>
-                
               </div>
               <div class="card-body flip-card-back pb-0">
                 <div class="back-main-content d-flex justify-content-center align-items-center text-gradient">
                   <div id="loaderB"></div>
                   <div class="card-text m-4" id="pageB"><%- card.pageB %></div>
                 </div>
-                
               </div>
             </div>
           </div>
@@ -107,6 +105,7 @@
         
       </div>
       
+      <!--FRONT CARD MENU-->
       <div class="row" id="front-menu-row">
         <div class="col-lg-6 offset-lg-2">
           <div class="front-menu d-flex justify-content-between align-items-center border-grey">
@@ -119,6 +118,7 @@
         </div>
       </div>
 
+      <!--BACK CARD MENU-->
       <div class="row hide" id="back-menu-row">
         <div class="col-lg-6 offset-lg-2">
           <div class="back-menu d-flex justify-content-between align-items-center border-grey">
