card design rebuild

--- a/views/category.ejs
+++ b/views/category.ejs
@@ -35,7 +35,7 @@
                     <% if(category.name === "spravnipravo"){ %> <img src="/img/icon_sprava.png" class="img-fit" alt="" /> <% } %>
                     <% if(category.name === "ustavnipravo"){ %> <img src="/img/icon_ustavko.png" class="img-fit" alt="" /> <% } %>
                     <% if(category.name === "obchodnipravo"){ %> <img src="/img/icon_obchod.png" class="img-fit" alt="" /> <% } %>
-                    <% if(category.name === "mezinarodnipravo"){ %> <img src="/img/icon_mezinarodko.png" class="img-fit" alt="" /> <% } %>
+                    <% if(category.name === "pravnickaanglictina"){ %> <img src="/img/anglictina.png" class="img-fit" alt="" /> <% } %>
                     <% if(category.name === "trestniproces"){ %> <img src="/img/icon_trestproces.png" class="img-fit" alt="" /> <% } %>
                     <% if(category.name === "civilniproces"){ %> <img src="/img/icon_civilproces.png" class="img-fit" alt="" /> <% } %>
                 </div>
