--- a/views/index.ejs
+++ b/views/index.ejs
@@ -244,17 +244,17 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-3 col-6 mb-4">
-                    <a href="/category/mezinarodnipravo" class="landing-link">
+                    <a href="/category/pravnickaanglictina" class="landing-link">
                         <div class="card  ">
                             <div class="d-flex justify-content-center">
                                 <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
-                                    <img src="/img/icon_mezinarodko.png" class="img-fit" alt="" />
+                                    <img src="/img/icon_anglictina.png" class="img-fit" alt="" />
                                 </div>
                             </div>
                             <div class="card-body cat-text">
-                                <h5 class="card-title">Mezinárodní právo</h5>
-                                <p class="text-muted"><%= mezinarodnipravo.numOfCards %> kartiček</p>
-                                <a href="/category/mezinarodnipravo" class="btn btn-sm btn-danger">Studovat</a>
+                                <h5 class="card-title">Právnická angličtina</h5>
+                                <p class="text-muted"><%= pravnickaanglictina.numOfCards %> kartiček</p>
+                                <a href="/category/pravnickaanglictina" class="btn btn-sm btn-danger">Studovat</a>
                             </div>
                         </div>
                     </a>
